k8s/services/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
namespace: drinks
metadata:
  name: drinks-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
