k8s/services/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee
  namespace: drinks
  labels:
    app: frontend-coffee
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: frontend-coffee
---
apiVersion: v1
kind: Service
metadata:
  name: tea
  namespace: drinks
  labels:
    app: frontend-tea
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: frontend-tea
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
namespace: drinks
metadata:
  name: coffee-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - drinks-gateway
  http:
  - match:
    - uri:
        prefix: /coffee
    #rewrite:
    #  uri: '/'
    route:
    - destination:
        port:
          number: 80
        host: coffee.drinks.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
namespace: drinks
metadata:
  name: tea-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - drinks-gateway
  http:
  - match:
    - uri:
        prefix: /tea
    route:
    - destination:
        port:
          number: 80
        host: tea.drinks.svc.cluster.local
